<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/cardview_horizontal_margin"
    android:layout_marginStart="@dimen/cardview_horizontal_margin"
    android:layout_marginRight="@dimen/cardview_horizontal_margin"
    android:layout_marginEnd="@dimen/cardview_horizontal_margin"
    android:layout_marginTop="@dimen/cardview_vertical_margin"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/list_item_icon_weather"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/light_rain"
                android:contentDescription="@string/list_item_icon_weather_description"/>

            <TextView
                android:id="@+id/list_item_current_temperature"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_current_temperature"/>

        </LinearLayout>

        <TextView
            android:id="@+id/list_item_city_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="22sp"
            android:text="@string/example_city"/>

        <ImageView
            android:id="@+id/list_item_icon_delete"
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/list_item_delete"/>

    </LinearLayout>

</android.support.v7.widget.CardView>